--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "@overnightjs/core": "^1.7.6",
     "aws-cdk-lib": "^2.3.0",
     "aws-sdk": "^2.1048.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "class-validator": "^0.13.2",
     "constructs": "^10.0.16",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-http-context": "^1.2.4",
     "express-rate-limit": "^6.0.1",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.21",
@@ -47,10 +50,12 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^27.0.3",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.5",
     "@types/supertest": "^2.0.11",
