--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "prebuild": "rimraf dist",
     "build": "tsc",
     "start": "node dist/src/index.js",
-    "start:dev": "nodemon -r dotenv/config src/index.ts",
-    "start:debug": "nodemon --exec 'node --inspect -r dotenv/config --require ts-node/register src/index.ts'",
+    "start:dev": "export NODE_ENV=development && nodemon src/index.ts",
+    "start:debug": "export NODE_ENV=development && nodemon --exec 'node --inspect --require ts-node/register src/index.ts'",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test:e2e": "jest --projects ./test --runInBand",
-    "test:unit": "export DOTENV_CONFIG_PATH=test.env && jest"
+    "test:unit": "jest"
   },
   "keywords": [
     "triangle",
@@ -34,6 +34,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "class-validator": "^0.13.2",
+    "config": "^3.3.6",
     "constructs": "^10.0.16",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -47,10 +48,12 @@
     "source-map-support": "^0.5.21",
     "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-cloudwatch": "^3.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/config": "0.0.40",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
