--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
-    "start": "npm run build && node dist/src/index.js",
-    "start:prod": "export NODE_ENV=production && node dist/src/index.js",
+    "start": "node dist/src/index.js",
     "start:dev": "export NODE_ENV=development && nodemon src/index.ts",
     "start:debug": "export NODE_ENV=development && nodemon --exec 'node --inspect --require ts-node/register src/index.ts'",
     "lint": "eslint ./src ./test --ext .ts",
@@ -22,7 +21,8 @@
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
     "test": "npm run test:unit && npm run test:e2e",
     "test:e2e": "jest --projects ./test --runInBand",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "deploy": "npm run build && rimraf app.zip && zip -r app.zip dist config Procfile package.json && cdk bootstrap && cdk deploy"
   },
   "keywords": [
     "triangle",
@@ -37,7 +37,6 @@
     "@overnightjs/core": "^1.7.6",
     "aws-cdk-lib": "^2.3.0",
     "aws-sdk": "^2.1048.0",
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "class-validator": "^0.13.2",
     "config": "^3.3.6",
@@ -58,7 +57,6 @@
     "winston-cloudwatch": "^3.1.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/config": "0.0.40",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
